# dynein

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  k8s-deploy-dynamodb-local.yml
.github/: CODEOWNERS
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  bot.yml  build_binaries_on_new_releases.yml  ci.yml  codecov.yml
docs/: format.md  query.md
fuzz/: Cargo.toml  fuzz_dict
fuzz/fuzz_targets/: parse_dynein_format.rs  parse_remove_action.rs  parse_set_action.rs  parse_sort_key_with_fallback.rs  parse_sort_key_with_suggest.rs
src/: app.rs  apply.rs  batch.rs  bootstrap.rs  cmd.rs  control.rs  data.rs  expression.pest  key.rs  lib.rs  main.rs  parser.rs  shell.rs  transfer.rs  util.rs
src/ddb/: key.rs  mod.rs  table.rs
src/resources/attribution/: ThirdPartyAttribution.br
src/resources/bootstrap/: Forum.json.br  ProductCatalog.json.br  Reply.json.br  Thread.json.br  moviedata.json.br
tests/: admin.rs  admin_create.rs  admin_delete.rs  admin_desc.rs  admin_list.rs  admin_update.rs  apply.rs  auxiliary.rs  backup.rs  bootstrap.rs  bwrite.rs  cli_tests.rs  config.rs  del.rs  desc.rs  export.rs  get.rs  import.rs  integration_test.rs  list.rs  put.rs  query.rs  restore.rs  scan.rs  shell.rs  upd.rs  use.rs
tests/cmd/: admin.md  backup.md  bootstrap.md  bwrite.md  config.md  del.md  desc.md  export.md  get.md  help.md  import.md  list.md  put.md  query.md  restore.md  scan.md  upd.md  use.md
tests/cmd_windows/: admin.md  backup.md  bootstrap.md  bwrite.md  config.md  del.md  desc.md  export.md  get.md  help.md  import.md  list.md  put.md  query.md  restore.md  scan.md  upd.md  use.md
tests/resources/: test_batch_write.json  test_batch_write_delete.json  test_batch_write_put.json  test_batch_write_put_delete.json  test_batch_write_put_delete_multiple_tables.json  test_batch_write_put_output.json
tests/util/: mod.rs
