# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "dynein"
description = "DynamoDB Command Line Interface"
version = "0.2.0"
authors = ["Takuya Hashimoto <thash@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/awslabs/dynein"
repository = "https://github.com/awslabs/dynein"
keywords = ["cli", "dynamodb", "aws"]
categories = ["command-line-utilities"]

[[bin]]
name = "dy"
path = "src/main.rs"

[dependencies]
atty            = "0.2"
chrono          = "0.4"
dialoguer       = "0.9.0"
dirs            = "3.0.1"
env_logger      = "0.9.0"
futures         = "0.3.8"
glob            = "0.3.0"
log             = "0.4.11"
regex           = "1.4.2"
reqwest         = "0.10.9"
rusoto_core           = "0.45.0"
rusoto_cloudformation = "0.45.0"
rusoto_dynamodb       = "0.45.0"
rusoto_ec2            = "0.45.0"
serde = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
serde_yaml      = "0.8"
structopt       = "0.3.20"
tabwriter       = "1.2"
tempfile        = "3.1.0"
termcolor       = "1.1.2"
zip             = "0.5.8"
# tokio has newer version, but "h2" used in "reqwest" hasn't yet support tokio v0.3. track: https://github.com/hyperium/h2/releases
tokio = { version = "0.2.16", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.2" # contains helpers make executing the main binary on integration tests easier.
predicates = "2.0.3" # to introduce advanced assertions
once_cell = "1.8.0" # to setup docker container syncrhonously

[build-dependencies]
# Unless the "version_check" build dependency, proc-macro-error-attr v1.0.4 build would fail.
# To avoid it, we use v0.9.2 (latest as of 2020-11-21) to make sure Version::to_mmp func is public: https://github.com/SergioBenitez/version_check/commit/d9bd8e449
version_check = "0.9.2"
serde_yaml = "0.8.11"
yaml-rust  = "0.4.3"
