# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "dynein"
description = "DynamoDB Command Line Interface"
version = "0.2.1"
authors = ["Takuya Hashimoto <thash@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/awslabs/dynein"
repository = "https://github.com/awslabs/dynein"
keywords = ["cli", "dynamodb", "aws"]
categories = ["command-line-utilities"]

[[bin]]
name = "dy"
path = "src/main.rs"

[dependencies]
aws-config       = "1.4.0"
aws-sdk-dynamodb = "1.28.0"
aws-sdk-ec2      = "1.42.0"
aws-smithy-runtime-api = "1.6.0"
aws-smithy-types = "1.1.9"
chrono           = "0.4"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer        = "0.11.0"
dirs             = "5.0.1"
env_logger       = "0.11.3"
futures          = "0.3.30"
log              = "0.4.21"
regex            = "1.10.4"
reqwest          = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
serde_yaml       = "0.9.34"
tabwriter        = "1.4"
tempfile         = "3.10.1"
termcolor        = "1.4.1"
zip              = "1.1.2"
tokio = { version = "1.37.0", features = ["full"] }
pest = "2.7.10"
pest_derive = "2.7.10"
bytes = "1.6.0"
itertools = "0.13.0"
console = "0.15.8"
brotli = "6.0.0"
base64 = "0.22.0"
thiserror = "1.0.59"

[dev-dependencies]
assert_cmd = "2.0.14" # contains helpers make executing the main binary on integration tests easier.
predicates = "3.1.0" # to introduce advanced assertions
once_cell = "1.19.0" # to setup docker container syncrhonously
trycmd = "0.15.1" # snapshot testing for CLI
rand = "0.8.5"
